# ignacio-ireta.github.io

./: .gitignore  .htmlvalidate.json  .prettierignore  .prettierrc.json  CHANGELOG.md  CNAME  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  LICENSE  PLAN.md  README.md  _config.yml  eslint.config.js  index.html  package-lock.json  package.json  requirements.md  script.js  style.css  tsconfig.json
.github/workflows/: ci.yml
assets/data/: chart-data.json
datascience_project/: README.md  compare_algorithms.py  generate_insights.py  lol_differential_evolution.py  lol_genetic_algorithm.py  pyproject.toml  run_collector.py  run_optimization.py  run_processor.py  the_collector.py  website_manager.py
datascience_project/lol_data_collector/: config.py  data_processor.py  the_collector.py
docs/: ENGINEERING-STANDARDS.md  README.md  architecture.md  cdmx-data-contract.md  etf-outputs-contract.md  index.html  script.js  styles.css  testing.md
docs/assets/: champion_id_mapping.json
docs/data/: algorithm_comparison.json  champion_metadata.json  dataset_analysis.json  eda_insights.json
docs/js/: champion-manager.js  content-updater.js  data-loader.js  item-manager.js
projects/cdmx-map/: index.html
projects/cdmx-map/assets/: index-B2Ip7rBX.css  (+11 more)
projects/etf-portfolio-research/: embed.js  index.html
reed/privacy/: index.html  style.css
scripts/: check-links.mjs
src/background/: config.js  geometry.js  main.js  palette.js  random.js  reaction.js  scene.js  species.js  watercolor.js
tests/: boot.test.mjs  chemistry.test.mjs  geometry.test.mjs  random.test.mjs
(+199 files in other folders)
