[project]
name = "lol-data-collector"
version = "0.1.0"
description = "League of Legends data collection and analysis tools"
authors = [{name = "Ignacio Ireta", email = "ignacio.ireta@example.com"}]
readme = "README_COLLECTOR.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "urllib3>=2.0.0",
    "pyarrow>=12.0.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
lol-collector = "run_collector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
